--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button onclick="fact()">x!</button>
                 <button class="btn">(</button>
                 <button class="btn">)</button>
-                <button onclick="%()">%</button>
+                <button onclick="percent()">%</button>
                 <button id="ac" onclick="screen.value=''">AC</button>
             </div>
 
